--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.8",
     "cookie-parser": "^1.4.7",
+    "coolsms-node-sdk": "^2.1.0",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "express": "^4.21.1",
