--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "crypto": "^1.0.1",
     "express": "^4.21.1",
     "express-session": "^1.18.1",
+    "http-proxy-middleware": "^3.0.3",
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.11.5",
     "react": "^18.2.0",
